force-app/main/default/objects/Loan_Application__c/fields/Disbursal_Type__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Type__c</fullName>
    <label>Disbursal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scan Based Disbursal</fullName>
            </value>
            <value>
                <fullName>Physical File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>