force-app/main/default/objects/Loan_Application__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Assigned</fullName>
            </value>
            <value>
                <fullName>SBD Ops Maker Pending</fullName>
            </value>
            <value>
                <fullName>SBD Ops Checker Pending</fullName>
            </value>
            <value>
                <fullName>SBD Ops Verifier Pending</fullName>
            </value>
            <value>
                <fullName>FTS Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>