force-app/main/default/objects/Loan_Application__c/listViews/Loan_List_View.listView-meta.xml
<ListView>
    <fullName>Loan_List_View</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>Loan List View</label>
</ListView>